--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -25,10 +25,10 @@
       if (url && url.length > 1) {
         url = url[1];
       } else {
-        url = "/swaggerApi";
+        url = "../../swaggerApi";
       }
       window.swaggerUi = new SwaggerUi({
-      url: "/swaggerApi",
+      url: url,
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
@@ -43,15 +43,6 @@
       docExpansion: "none",
       sorter : "alpha"
     });
-
-    $('#input_apiKey').change(function() {
-      var key = $('#input_apiKey')[0].value;
-      log("key: " + key);
-      if(key && key.trim() != "") {
-        log("added key " + key);
-        window.authorizations.add("key", new ApiKeyAuthorization("api_key", key, "query"));
-      }
-    })
     window.swaggerUi.load();
   });
   </script>
