[Vega] Fixed swagger custom url

--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -25,7 +25,7 @@
     $(function () {
       var url = window.location.search.match(/url=([^&]+)/);
       if (url && url.length > 1) {
-        URL = decodeURIComponent(url[1]);
+        url = decodeURIComponent(url[1]);
       } else {
         url = "../../swaggerApi";
       }
