--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -71,7 +71,14 @@
         jsonEditor: false,
         defaultModelRendering: 'schema',
         showRequestHeaders: false,
-        showOperationIds: false
+        showOperationIds: false,
+        // sort apis by tag (className)
+        apisSorter:  function (e, t) {
+            if (_.isArray(e.tags) && _.isArray(t.tags)){
+              return e.tags[0].localeCompare(t.tags[0]);
+            }
+            return e.name.localeCompare(t.name); 
+        } 
       });
 
       window.swaggerUi.load();
