--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -74,7 +74,7 @@
         showOperationIds: false,
         // sort apis by tag (className)
         apisSorter:  function (e, t) {
-            if (_.isArray(e.tags) && e.tags.length > 0 && _.isArray(t.tags) && e.tags.length > 0){
+            if (_.isArray(e.tags) && e.tags.length > 0 && _.isArray(t.tags) && t.tags.length > 0){
               return e.tags[0].localeCompare(t.tags[0]);
             }
             return e.name.localeCompare(t.name); 
