[Vega] Removed online validator

--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -67,6 +67,7 @@
         onFailure: function(data) {
           log("Unable to Load SwaggerUI");
         },
+        validatorUrl: null,
         docExpansion: "none",
         jsonEditor: false,
         defaultModelRendering: 'schema',
