[vega] fix swaggerUi

--- a/vertigo-vega-impl/src/main/resources/swagger-site/index.html
+++ b/vertigo-vega-impl/src/main/resources/swagger-site/index.html
@@ -85,7 +85,7 @@ window.onload = function() {
     if (url && url.length > 1) {
       url = decodeURIComponent(url[1]);
     } else {
-      url = "../../swaggerApi";
+      url = "../swaggerApi";
     }
   // Build a system
   const ui = SwaggerUIBundle({
